--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,6 +27,8 @@
   </div>
 
   <%= f.submit "Sign up", class: 'btn btn-primary' %>
+ 
+  <%= link_to "sign in via trakt.tv", newbill_path %>
 <% end %>
 
 <%= render "devise/shared/links" %>
