--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
     <% content_for :trend2 do %>
 
     <%= button_to "ViewAll", ViewAll_path(:type => "28" )%>
-  
+
+  <%= button_to "ViewAll", ViewAll_path(:type => "35" )%>
+
+  <%= button_to "ViewAll", ViewAll_path(:type => "27" )%>
+
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
     <% count =0 %>
