--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,3 +2,25 @@
 @import "bootstrap"
 @import 'bootstrap/theme'
 
+nav
+  ul
+    margin: 0
+    padding: 0
+    list-style: none
+
+  li
+    display: inline-block
+
+  a
+    display: block
+    padding: 6px 12px
+    text-decoration: none
+
+a
+  img
+      width :50px
+      height:50px
+
+
+
+   
