--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,172 +2,265 @@
 
     <%= button_to "ViewAll", ViewAll_path(:type => "28" )%>
 
-  <%= button_to "ViewAll", ViewAll_path(:type => "35" )%>
+    <%= button_to "ViewAll", ViewAll_path(:type => "35" )%>
 
-  <%= button_to "ViewAll", ViewAll_path(:type => "27" )%>
+    <%= button_to "ViewAll", ViewAll_path(:type => "27" )%>
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-    <% count =0 %>
-    <% @trendArray.each_slice(3).each do |i|   %>
-    <% count =count+1  %>
-      <li data-target="#mycarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
-    <% end %>
-    </ol>
-    <h2> hello </h2>
-    <div class="carousel-inner carouselHeight"> 
-    <% count2 =1 %>
-    <% @trendArray.each_slice(3) do |movies| %>
-    <div class="item <%= 'active' if count2 == 1 %>">
-    <% count2 =count2+1 %>
-   
-    <div class="row">
-       
-        <% movies.each do |movie| %>
-        <div  class="col-sm-3 col-xs-6 hover-cover">
-
-<%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
-   <%= image_tag (image_url(movie["Poster"])), class: "some css class here" %>
-<% end %>
-
-
-                    <div class="carousel-caption">This is a caption </div>
-                </div>
+      <ol class="carousel-indicators">
+        <% count =0 %>
+        <% @trendArray.each_slice(3).each do |i|   %>
+        <% count =count+1  %>
+        <li data-target="#mycarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
         <% end %>
-      </div>
+      </ol>
+      <h2> hello </h2>
+      <div class="carousel-inner carouselHeight"> 
+        <% count2 =1 %>
+        <% @trendArray.each_slice(3) do |movies| %>
+        <div class="item <%= 'active' if count2 == 1 %>">
+          <% count2 =count2+1 %>
+          
+          <div class="row">
+           
+            <% movies.each do |movie| %>
+            <div  class="col-sm-3 col-xs-6 hover-cover">
 
-      </div>
-    <% end %>
-
-    </div>
- <a class="left carousel-control arrow" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-    </div>
+              <%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
+              <%= image_tag (image_url(movie["Poster"])), class: "some css class here" %>
+              <% end %>
 
 
-<div id="popularCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-    <% count =0 %>
-    <% @popularArray.each_slice(3).each do |i|   %>
-    <% count =count+1  %>
-      <li data-target="#popularcarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
-    <% end %>
-    </ol>
-    <h2> hello </h2>
-    <div class="carousel-inner carouselHeight"> 
-    <% count2 =1 %>
-    <% @popularArray.each_slice(3) do |movies| %>
-    <div class="item <%= 'active' if count2 == 1 %>">
-    <% count2 =count2+1 %>
-   
-    <div class="row">
-       
-        <% movies.each do |movie| %>
-        <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
-                    <div class="carousel-caption">This is a caption </div>
-                </div>
+              <div class="carousel-caption">This is a caption </div>
+            </div>
+            <% end %>
+          </div>
+
+        </div>
         <% end %>
-      </div>
 
       </div>
-    <% end %>
-
-    </div>
- <a class="left carousel-control arrow" href="#popularCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#popularCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
+      <a class="left carousel-control arrow" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
 
-<div id="BoxofficeCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-    <% count =0 %>
-    <% @boxofficeArray.each_slice(3).each do |i|   %>
-    <% count =count+1  %>
-      <li data-target="#Boxofficecarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
-    <% end %>
-    </ol>
-    <h2> hello </h2>
-    <div class="carousel-inner carouselHeight"> 
-    <% count2 =1 %>
-    <% @boxofficeArray.each_slice(3) do |movies| %>
-    <div class="item <%= 'active' if count2 == 1 %>">
-    <% count2 =count2+1 %>
-   
-    <div class="row">
-       
-        <% movies.each do |movie| %>
-        <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
-                    <div class="carousel-caption">This is a caption </div>
-                </div>
+    <div id="popularCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <% count =0 %>
+        <% @popularArray.each_slice(3).each do |i|   %>
+        <% count =count+1  %>
+        <li data-target="#popularcarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
         <% end %>
-      </div>
+      </ol>
+      <h2> hello </h2>
+      <div class="carousel-inner carouselHeight"> 
+        <% count2 =1 %>
+        <% @popularArray.each_slice(3) do |movies| %>
+        <div class="item <%= 'active' if count2 == 1 %>">
+          <% count2 =count2+1 %>
+          
+          <div class="row">
+           
+            <% movies.each do |movie| %>
+            <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
+              <div class="carousel-caption">This is a caption </div>
+            </div>
+            <% end %>
+          </div>
+
+        </div>
+        <% end %>
 
       </div>
-    <% end %>
-
+      <a class="left carousel-control arrow" href="#popularCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#popularCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
- <a class="left carousel-control arrow" href="#BoxofficeCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#BoxofficeCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
+
+
+    <div id="BoxofficeCarousel" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <% count =0 %>
+        <% @boxofficeArray.each_slice(3).each do |i|   %>
+        <% count =count+1  %>
+        <li data-target="#Boxofficecarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
+        <% end %>
+      </ol>
+      <h2> hello </h2>
+      <div class="carousel-inner carouselHeight"> 
+        <% count2 =1 %>
+        <% @boxofficeArray.each_slice(3) do |movies| %>
+        <div class="item <%= 'active' if count2 == 1 %>">
+          <% count2 =count2+1 %>
+          
+          <div class="row">
+           
+            <% movies.each do |movie| %>
+            <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
+              <div class="carousel-caption">This is a caption </div>
+            </div>
+            <% end %>
+          </div>
+
+        </div>
+        <% end %>
+
+      </div>
+      <a class="left carousel-control arrow" href="#BoxofficeCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#BoxofficeCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
 
     <div id="ActionCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-    <% count =0 %>
-    <%  @ActionArray.each_slice(3).each do |i|   %>
-    <% count =count+1  %>
-      <li data-target="#Boxofficecarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
-    <% end %>
-    </ol>
-    <h2> hello </h2>
-    <div class="carousel-inner carouselHeight"> 
-    <% count2 =1 %>
-    <%  @ActionArray.each_slice(3) do |movies| %>
-    <div class="item <%= 'active' if count2 == 1 %>">
-    <% count2 =count2+1 %>
-   
-    <div class="row">
-       
-        <% movies.each do |movie| %>
-        <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
-                    <div class="carousel-caption">This is a caption </div>
-                </div>
+      <ol class="carousel-indicators">
+        <% count =0 %>
+        <%  @ActionArray.each_slice(3).each do |i|   %>
+        <% count =count+1  %>
+        <li data-target="#Boxofficecarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
         <% end %>
-      </div>
+      </ol>
+      <h2> hello </h2>
+      <div class="carousel-inner carouselHeight"> 
+        <% count2 =1 %>
+        <%  @ActionArray.each_slice(3) do |movies| %>
+        <div class="item <%= 'active' if count2 == 1 %>">
+          <% count2 =count2+1 %>
+          
+          <div class="row">
+           
+            <% movies.each do |movie| %>
+            <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
+              <div class="carousel-caption">This is a caption </div>
+            </div>
+            <% end %>
+          </div>
+
+        </div>
+        <% end %>
 
       </div>
-    <% end %>
 
+      <a class="left carousel-control arrow" href="#ActionCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#ActionCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
- <a class="left carousel-control arrow" href="#ActionCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#ActionCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-    <%end%>
+    <div class ="row">
+      <div class="col-md-12 text-center"">
+        <%= button_to "ViewAll", ViewAll_path(:type => "28" ),class: "btn btn-primary" %>
+      </div>
+      <div id="ComedyCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <% count =0 %>
+          <%  @ComedyArray.each_slice(3).each do |i|   %>
+          <% count =count+1  %>
+          <li data-target="#Comedycarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
+          <% end %>
+        </ol>
+        <h2> hello </h2>
+        <div class="carousel-inner carouselHeight"> 
+          <% count2 =1 %>
+          <%  @ComedyArray.each_slice(3) do |movies| %>
+          <div class="item <%= 'active' if count2 == 1 %>">
+            <% count2 =count2+1 %>
+            
+            <div class="row">
+             
+              <% movies.each do |movie| %>
+              <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
+                <div class="carousel-caption">This is a caption </div>
+              </div>
+              <% end %>
+            </div>
+
+          </div>
+          <% end %>
+
+        </div>
+        <a class="left carousel-control arrow" href="#ComedyCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#ComedyCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <div class ="row">
+        <div class="col-md-12 text-center"">
+          <%= button_to "ViewAll", ViewAll_path(:type => "35" ),class: "btn btn-primary" %>
+        </div>
+        <div id="HorrorCarousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <% count =0 %>
+            <%  @HorrorArray.each_slice(3).each do |i|   %>
+            <% count =count+1  %>
+            <li data-target="#Comedycarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
+            <% end %>
+          </ol>
+          <h2> hello </h2>
+          <div class="carousel-inner carouselHeight"> 
+            <% count2 =1 %>
+            <%  @HorrorArray.each_slice(3) do |movies| %>
+            <div class="item <%= 'active' if count2 == 1 %>">
+              <% count2 =count2+1 %>
+              
+              <div class="row">
+               
+                <% movies.each do |movie| %>
+                <div  class="col-sm-3 col-xs-6 hover-cover"> <%= image_tag (image_url(movie["Poster"]))%>
+                  <div class="carousel-caption">This is a caption </div>
+                </div>
+                <% end %>
+              </div>
+
+            </div>
+            <% end %>
+
+          </div>
+          <a class="left carousel-control arrow" href="#HorrorCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#HorrorCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+        <div class ="row">
+          <div class="col-md-12 text-center"">
+            <%= button_to "ViewAll", ViewAll_path(:type => "27" ),class: "btn btn-primary" %>
+          </div>
+
+          
+        </div>
+        
+        <%end%>
 
 
-    
+        
 
 
 
