--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,7 +1,28 @@
 @import "bootstrap-sprockets"
 @import "bootstrap"
-@import 'bootstrap/theme'
+@import "bootstrap/theme"
 
+.imageclass
+  height: 250px       
+  border-top: 0
+  background: #c4e17f
+  border-radius: 5px
+  display: block
+  margin-left: auto
+  margin-right: auto
 
+.carousel-inner
+  margin: 0 auto  
+  width: 75%    
+  
+.carousel-control
+  width: 50px
 
-   
+.new_user
+  margin-left: 25%
+  margin-right: 25%
+  width: 50%
+.sharedlinks
+  margin-left: 25%
+  margin-right: 25%
+  width: 50%
