--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,17 @@
     <% content_for :trend2 do %>
 
-
+ <h2> Trending Movies </h2>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <% count =0 %>
-        <%- @trendArray.each_slice(3).each do |i|   %>
+        <%- @trendArray.each_slice(4).each do |i|   %>
         <% count =count+1  %>
         <li data-target="#mycarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
         <% end %>
       </ol>
-      <h2> Trending Movies </h2>
       <div class="carousel-inner carouselHeight"> 
         <% count2 =1 %>
-        <% @trendArray.each_slice(3) do |movies| %>
+        <% @trendArray.each_slice(4) do |movies| %>
         <div class="item <%= 'active' if count2 == 1 %>">
           <% count2 =count2+1 %>
 
@@ -22,7 +21,7 @@
             <div  class="col-sm-3 col-xs-6 hover-cover">
 
               <%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
-              <%= image_tag (image_url(movie["Poster"]))   %>
+              <%= image_tag (image_url(movie["Poster"])) ,class:"imageclass"  %>
               <% end %>
 
 
@@ -35,29 +34,32 @@
         <% end %>
 
       </div>
+      <div text-align="center">
       <a class="left carousel-control arrow" href="#myCarousel" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left"></span>
         <span class="sr-only">Previous</span>
       </a>
+      </div>
       <a class="right carousel-control" href="#myCarousel" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right"></span>
         <span class="sr-only">Next</span>
       </a>
+
     </div>
 
-
+<h2> Popular Movies </h2>
     <div id="popularCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <% count =0 %>
-        <% @popularArray.each_slice(3).each do |i|   %>
+        <% @popularArray.each_slice(4).each do |i|   %>
         <% count =count+1  %>
         <li data-target="#popularcarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
         <% end %>
       </ol>
-      <h2> Popular Movies </h2>
+      
       <div class="carousel-inner carouselHeight"> 
         <% count2 =1 %>
-        <% @popularArray.each_slice(3) do |movies| %>
+        <% @popularArray.each_slice(4) do |movies| %>
         <div class="item <%= 'active' if count2 == 1 %>">
           <% count2 =count2+1 %>
 
@@ -66,7 +68,7 @@
             <% movies.each do |movie| %>
             <div  class="col-sm-3 col-xs-6 hover-cover"> 
               <%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
-              <%= image_tag (image_url(movie["Poster"]))   %>
+              <%= image_tag (image_url(movie["Poster"])) ,class:"imageclass"  %>
               <% end %>
               <div class="carousel-caption">This is a caption </div>
             </div>
@@ -87,19 +89,19 @@
       </a>
     </div>
 
-
+<h2> Box Office </h2>
     <div id="BoxofficeCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <% count =0 %>
-        <% @boxofficeArray.each_slice(3).each do |i|   %>
+        <% @boxofficeArray.each_slice(4).each do |i|   %>
         <% count =count+1  %>
         <li data-target="#Boxofficecarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
         <% end %>
       </ol>
-      <h2> Box Office </h2>
+      
       <div class="carousel-inner carouselHeight"> 
         <% count2 =1 %>
-        <% @boxofficeArray.each_slice(3) do |movies| %>
+        <% @boxofficeArray.each_slice(4) do |movies| %>
         <div class="item <%= 'active' if count2 == 1 %>">
           <% count2 =count2+1 %>
 
@@ -108,7 +110,7 @@
             <% movies.each do |movie| %>
             <div  class="col-sm-3 col-xs-6 hover-cover"> 
               <%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
-              <%= image_tag (image_url(movie["Poster"]))   %>
+              <%= image_tag (image_url(movie["Poster"])) ,class:"imageclass"  %>
               <% end %>
               <div class="carousel-caption">This is a caption </div>
             </div>
@@ -128,19 +130,19 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-
+<h2> Action </h2>
     <div id="ActionCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <% count =0 %>
-        <%  @ActionArray.each_slice(3).each do |i|   %>
+        <%  @ActionArray.each_slice(4).each do |i|   %>
         <% count =count+1  %>
         <li data-target="#Boxofficecarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
         <% end %>
       </ol>
-      <h2> Action </h2>
+      
       <div class="carousel-inner carouselHeight"> 
         <% count2 =1 %>
-        <%  @ActionArray.each_slice(3) do |movies| %>
+        <%  @ActionArray.each_slice(4) do |movies| %>
         <div class="item <%= 'active' if count2 == 1 %>">
           <% count2 =count2+1 %>
 
@@ -149,7 +151,7 @@
             <% movies.each do |movie| %>
             <div  class="col-sm-3 col-xs-6 hover-cover"> 
               <%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
-              <%= image_tag (image_url(movie["Poster"]))   %>
+              <%= image_tag (image_url(movie["Poster"])) ,class:"imageclass"  %>
               <% end %>
               <div class="carousel-caption">This is a caption </div>
             </div>
@@ -174,18 +176,20 @@
       <div class="col-md-12 text-center"">
         <%= button_to "ViewAll", ViewAll_path(:type => "28" ),class: "btn btn-primary" %>
       </div>
+
+       <h2> Comedy </h2>
       <div id="ComedyCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <% count =0 %>
-          <%  @ComedyArray.each_slice(3).each do |i|   %>
+          <%  @ComedyArray.each_slice(4).each do |i|   %>
           <% count =count+1  %>
           <li data-target="#Comedycarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
           <% end %>
         </ol>
-        <h2> Comedy </h2>
+       
         <div class="carousel-inner carouselHeight"> 
           <% count2 =1 %>
-          <%  @ComedyArray.each_slice(3) do |movies| %>
+          <%  @ComedyArray.each_slice(4) do |movies| %>
           <div class="item <%= 'active' if count2 == 1 %>">
             <% count2 =count2+1 %>
 
@@ -194,7 +198,7 @@
               <% movies.each do |movie| %>
               <div  class="col-sm-3 col-xs-6 hover-cover"> 
               <%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
-              <%= image_tag (image_url(movie["Poster"]))   %>
+              <%= image_tag (image_url(movie["Poster"])) ,class:"imageclass"  %>
               <% end %>
                 <div class="carousel-caption">This is a caption </div>
               </div>
@@ -218,18 +222,20 @@
         <div class="col-md-12 text-center"">
           <%= button_to "ViewAll", ViewAll_path(:type => "35" ),class: "btn btn-primary" %>
         </div>
+
+         <h2> Horror </h2>
         <div id="HorrorCarousel" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <% count =0 %>
-            <%  @HorrorArray.each_slice(3).each do |i|   %>
+            <%  @HorrorArray.each_slice(4).each do |i|   %>
             <% count =count+1  %>
             <li data-target="#Comedycarousel" data-slide-to= '<%= "#{count}"%>' class="<%= 'active' if count == 1 %>"> </li>
             <% end %>
           </ol>
-          <h2> Horror </h2>
+         
           <div class="carousel-inner carouselHeight"> 
             <% count2 =1 %>
-            <%  @HorrorArray.each_slice(3) do |movies| %>
+            <%  @HorrorArray.each_slice(4) do |movies| %>
             <div class="item <%= 'active' if count2 == 1 %>">
               <% count2 =count2+1 %>
 
@@ -238,7 +244,7 @@
                 <% movies.each do |movie| %>
                 <div  class="col-sm-3 col-xs-6 hover-cover"> 
               <%= link_to description_path(:mid => movie['imdbID'].to_s) do %>
-              <%= image_tag (image_url(movie["Poster"]))   %>
+              <%= image_tag (image_url(movie["Poster"])) ,class:"imageclass"  %>
               <% end %>
                   <div class="carousel-caption">This is a caption </div>
                 </div>
