--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -26,3 +26,19 @@
   margin-left: 25%
   margin-right: 25%
   width: 50%
+
+.descimage
+  height: 350px
+  border-top: 0
+  background: #c4e17f
+  border-radius: 5px
+  display: block
+  margin-left: auto
+  margin-right: auto
+
+.btn
+  border-top: 0
+  border-radius: 5px
+  display: block
+  margin-left: auto
+  margin-right: auto
